test jvm opts